--- a/index.html
+++ b/index.html
@@ -32,53 +32,10 @@
       display: block;
     }
 
-    /* --- MOBILE --- */
+    /* Réduction taille logo uniquement sur mobile */
     @media (max-width: 768px) {
-
-      /* Menu vertical centré verticalement et horizontalement */
-      nav#main-nav ul {
-        display: flex !important;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        padding-left: 0;
-        margin: 0;
-        text-align: center;
-      }
-
-      nav#main-nav ul li {
-        display: block;
-        margin-bottom: 10px;
-      }
-
-      nav#main-nav ul li a {
-        display: inline-block;
-      }
-
-      /* Logo à droite en haut, plus petit, position absolue */
-      .logo-right {
-        position: absolute;
-        top: 15px;
-        right: 15px;
-        transform: none;
-      }
-
       .logo-right img {
-        height: 70px;
-      }
-
-      /* Texte "Poli Bijoux" agrandi uniquement sur mobile */
-      .logo a {
-        font-family: 'Great Vibes', cursive;
-        font-size: 2.5rem;
-        margin: 0;
-      }
-
-      /* Padding container pour éviter que menu soit caché par le logo */
-      header .container {
-        padding-right: 110px;
-        position: relative;
+        height: 60px;
       }
     }
   </style>
